--- a/public/css/CortesPageStyle/cortes.css
+++ b/public/css/CortesPageStyle/cortes.css
@@ -1830,11 +1830,13 @@
             display: flex;
             flex-direction: row;
             justify-content: center;
+            width: 100%;
     
             & h1 {
                 font-family: "Oxanium", sans-serif;
                 border: 1px solid rgb(197, 197, 197);
-                padding: 0 50px;
+                width: 80%;
+                text-align: center;
                 border-radius: 10px;
             }
         }
@@ -1846,7 +1848,7 @@
             & h1 {
                 font-family: "Oxanium", sans-serif;
                 border: 1px solid rgb(197, 197, 197);
-                padding: 0 50px;
+               
                 border-radius: 10px;
                 color: #fff;
             }
