--- a/public/css/ProfilePageStyle/profile.css
+++ b/public/css/ProfilePageStyle/profile.css
@@ -11,13 +11,42 @@
             display: flex;
             justify-content: center;
             background-color: #cecece;
+            position: relative;
+
+
+            & #btn_logout {
+                border: none;
+                outline: none;
+                background: transparent;
+                position: absolute;
+                right: 40px;
+                height: 100%;
+                
+                & img {
+                    width: 30px;
+                }
+            }
+            & #btn_logout:hover{
+                filter: drop-shadow(1px 1px 10px Black);
+                cursor: pointer;
+            }
+        }
+
+        
+
+        & .container-form-register {
+            width: 100%;
+            font-family: Arial, Helvetica, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
 
             & .img-profile {
                 position: relative;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                margin-top: 50px;
+                margin-top: -60px;
                 margin-bottom: 50px;
                 height: 100px;
                 width: 100px;
@@ -30,69 +59,44 @@
                     box-shadow: 2px 2px 10px rgb(0, 0, 0);
                 }
 
-                & #edit-img { 
+
+                & #load-img {
+                    width: 20px;
                     border: none;
                     outline: none;
                     position: absolute;
                     top: 95px;
                     right: -15px;
                     background-color: transparent;
-
-                    & img {
-                        width: 20px;
-                    }
-
-                    & #inp_img_profile {
-                        display: none;
-                    }
                 }
+
+                & #inp_img_profile {
+                    display: none;
+                }    
             }
-        }
 
-        & .container-title {
-            /*width: calc(100% - 400px);
-            padding: 50px 200px 0 200px;*/
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            margin-top: 60px;
-
-            & .title {
-                width: 1000px;
-                padding: 0 50px;
+            & .container-title {
+                /*width: calc(100% - 400px);
+                padding: 50px 200px 0 200px;*/
+                width: 100%;
                 display: flex;
                 flex-direction: row;
-                position: relative;
-
-                & h1 {
-                    font-size: 25px;
-                }
-                
-                & #btn_logout {
-                    border: none;
-                    outline: none;
-                    background: transparent;
-                    position: absolute;
-                    right: 40px;
-                    height: 100%;
-                    
-                    & img {
-                        width: 30px;
+                justify-content: center;
+    
+                & .title {
+                    width: 1000px;
+                    padding: 0 50px;
+                    display: flex;
+                    flex-direction: row;
+                    position: relative;
+    
+                    & h1 {
+                        font-size: 25px;
                     }
-                }
-                & #btn_logout:hover{
-                    filter: drop-shadow(1px 1px 10px Black);
-                    cursor: pointer;
+                    
+                    
                 }
             }
-        }
-
-        & .container-form-register {
-            width: 100%;
-            font-family: Arial, Helvetica, sans-serif;
-            display: flex;
-            justify-content: center;
 
             & .form-register {
                 background-image: linear-gradient(150deg, rgba(0,0,0,0.4), rgb(0, 10, 44));
@@ -380,10 +384,18 @@
                 box-shadow: 2px 2px 10px -2px rgb(126, 126, 126);
                 height: 100%;
 
+                & .empty-ag {
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    color: #858585;
+                }
 
                 & .table-agendamentos {
                     border: 1px solid rgb(133, 133, 133);
-                    border-collapse: collapse;
+                    border-collapse: collapse;               
                     
                     & #line-titles {
                         background-color: #8d919b;
@@ -451,16 +463,44 @@
     
         & .image-background-profile {
             width: 100%;
+            height: 105px;
             display: flex;
             justify-content: center;
             background-color: #cecece;
+            position: relative;
     
+            & #btn_logout {
+                border: none;
+                outline: none;
+                background: transparent;
+                position: absolute;
+                right: 40px;
+                height: 100%;
+                
+                & img {
+                    width: 30px;
+                }
+            }
+            & #btn_logout:hover{
+                filter: drop-shadow(1px 1px 10px Black);
+                cursor: pointer;
+            }
+        }
+    
+    
+        & .container-form-register {
+            width: 100%;
+            font-family: Arial, Helvetica, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
             & .img-profile {
                 position: relative;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                margin-top: 50px;
+                margin-top: -60px;
                 margin-bottom: 50px;
                 height: 100px;
                 width: 100px;
@@ -471,70 +511,42 @@
                     border-radius: 50%;
                     object-fit: cover;
                     box-shadow: 2px 2px 10px rgb(0, 0, 0);
-                }
+                }      
 
-                & #edit-img { 
+                & #load-img {
+                    width: 20px;
                     border: none;
                     outline: none;
                     position: absolute;
                     top: 95px;
                     right: -15px;
                     background-color: transparent;
-
-                    & img {
-                        width: 20px;
-                    }
-
-                    & #inp_img_profile {
-                        display: none;
-                    }
                 }
+
+                & #inp_img_profile {
+                    display: none;
+                }               
             }
-        }
-    
-        & .container-title {
-            /*width: calc(100% - 400px);
-            padding: 50px 200px 0 200px;*/
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            margin-top: 20px;
-    
-            & .title {
-                width: 1000px;
-                padding: 0 50px;
+
+            & .container-title {
+                /*width: calc(100% - 400px);
+                padding: 50px 200px 0 200px;*/
+                width: 100%;
                 display: flex;
-                position: relative;
-    
-                & h1 {
-                    font-size: 25px;
-                }
-                
-                & #btn_logout {
-                    border: none;
-                    outline: none;
-                    background: transparent;
-                    position: absolute;
-                    right: 40px;
-                    height: 100%;
-                    
-                    & img {
-                        width: 30px;
+                flex-direction: row;
+                justify-content: center;
+        
+                & .title {
+                    width: 1000px;
+                    padding: 0 50px;
+                    display: flex;
+                    position: relative;
+        
+                    & h1 {
+                        font-size: 25px;
                     }
                 }
-                & #btn_logout:hover{
-                    filter: drop-shadow(1px 1px 10px Black);
-                    cursor: pointer;
-                }
             }
-        }
-    
-        & .container-form-register {
-            width: 100%;
-            font-family: Arial, Helvetica, sans-serif;
-            display: flex;
-            justify-content: center;
     
             & .form-register {
                 background-image: linear-gradient(150deg, rgba(0,0,0,0.4), rgb(0, 10, 44));
@@ -837,6 +849,16 @@
                 width: 550px;
                 box-shadow: 2px 2px 10px -2px rgb(126, 126, 126);
                 font-size: 13px;
+                height: 100%;
+
+                & .empty-ag {
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    color: #858585;
+                }
 
                 & .table-agendamentos {
                     border: 1px solid rgb(133, 133, 133);
@@ -901,17 +923,47 @@
     
         & .image-background-profile {
             width: 100%;
+            height: 105px;
             display: flex;
             justify-content: center;
             background-color: #cecece;
+            position: relative;
     
+            
+
+            & #btn_logout {
+                border: none;
+                outline: none;
+                background: transparent;
+                position: absolute;
+                right: 15px;
+                height: 100%;
+                
+                & img {
+                    width: 30px;
+                }
+            }
+            & #btn_logout:hover{
+                filter: drop-shadow(1px 1px 10px Black);
+                cursor: pointer;
+            }
+        }
+    
+    
+        & .container-form-register {
+            width: calc(100% - 40px);
+            font-family: Arial, Helvetica, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
+
             & .img-profile {
                 position: relative;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                margin-top: 50px;
-                margin-bottom: 50px;
+                margin-top: -75px;
                 height: 100px;
                 width: 100px;
 
@@ -923,70 +975,39 @@
                     box-shadow: 2px 2px 10px rgb(0, 0, 0);
                 }
 
-                & #edit-img { 
+                & #load-img {
+                    width: 20px;
                     border: none;
                     outline: none;
                     position: absolute;
                     top: 95px;
                     right: -15px;
                     background-color: transparent;
+                }
 
-                    & img {
-                        width: 20px;
-                    }
-
-                    & #inp_img_profile {
-                        display: none;
-                    }
+                & #inp_img_profile {
+                    display: none;
                 }
             }
-        }
-    
-        & .container-title {
-            /*width: calc(100% - 400px);
-            padding: 50px 200px 0 200px;*/
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            margin-top: 20px;
-    
-            & .title {
-                width: calc(100% - 40px);
-                padding: 0 20px;
+
+            & .container-title {
+                width: 100%;
                 display: flex;
-                position: relative;
-    
-                & h1 {
-                    font-size: 20px;
+                flex-direction: row;
+                justify-content: center;
+        
+                & .title {
+                    width: calc(100% - 40px);
+                    padding: 0 20px;
+                    display: flex;
+                    position: relative;
+                    margin-top: 30px;
+        
+                    & h1 {
+                        font-size: 20px;
+                    }              
                 }
-
-                & #btn_logout {
-                    border: none;
-                    outline: none;
-                    background: transparent;
-                    position: absolute;
-                    right: 20px;
-                    height: 100%;
-                    
-                    & img {
-                        width: 30px;
-                    }
-                }
-                & #btn_logout:hover{
-                    filter: drop-shadow(1px 1px 10px Black);
-                    cursor: pointer;
-                }
-                
             }
-        }
-    
-        & .container-form-register {
-            width: calc(100% - 40px);
-            font-family: Arial, Helvetica, sans-serif;
-            display: flex;
-            justify-content: center;
-            padding: 20px;
     
             & .form-register {
                 background-image: linear-gradient(150deg, rgba(0,0,0,0.4), rgb(0, 10, 44));
@@ -1294,13 +1315,23 @@
             }
 
             & .div-table{
-                background-color: rgb(172, 118, 118);
+                background-color: rgb(228, 228, 228);
                 border-bottom: 1px solid rgb(172, 172, 172);
                 overflow-y: scroll;
                 padding: 0px 0 10px 0;
                 width: calc(100% - 18px);
                 box-shadow: 2px 2px 10px -2px rgb(126, 126, 126);
                 font-size: 11px;
+                height: 100%;
+
+                & .empty-ag {
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    color: #858585;
+                }
 
                 & .table-agendamentos {
                     border: 1px solid rgb(133, 133, 133);
@@ -1327,7 +1358,9 @@
                             border-radius: 5px;
                             position: absolute;
                             right: 5px;
-                            top: 4px;
+                            top: 6px;
+
+                            
                         }
                         & .btn-delete-agendamento:hover {
                             cursor: pointer;
