--- a/public/css/StructurePagesStyle/structure.css
+++ b/public/css/StructurePagesStyle/structure.css
@@ -139,7 +139,7 @@
                 margin-left: 20px;
 
                 img {
-                    width: 30px;
+                    width: 30px; 
                 }
             }
 
@@ -152,15 +152,18 @@
         } 
     }
 
+    #menu-sandwich {
+        display: none !important;
+    }
     .sandwich-hidden {
-        display: none;
+        display: none !important;
     }
 
     .open-menu {
-        display: none;
+        display: none !important;
     }
     .sandwich-light {
-        display: none;
+        display: none !important;
     }
 
 
@@ -382,10 +385,10 @@
     
 
     .sandwich-hidden {
+        display: none;
         background-color: #69707c;
         box-shadow: 2px 2px 10px black;
         position: absolute;
-        display: flex;
         flex-direction: column;
         height: 90px;
         width: 200px;
@@ -394,7 +397,7 @@
         border-radius: 10px 0 0 10px;
         z-index: 1;
         right: -240px;
-        transition: .3s;
+        transition: .4s;
     
         & #light-dark-theme2 {
             display: flex;
@@ -583,8 +586,6 @@
 }
 
 @media screen and (max-width: 550px){
-
-
     /*Estilo Light*/
     .links_light {
         display: flex;
@@ -623,7 +624,7 @@
                 & a {
                     border-bottom: 2px solid rgb(85, 85, 85);
                     border-radius: 0 0 5px 5px;
-                    width: 80px;
+                    width: 70px;
                     height: 50px;
                     text-align: center;
                     line-height: 3.5;
@@ -742,10 +743,10 @@
     }
     */
     .sandwich-hidden {
+        display: none;
         background-color: #69707c;
         box-shadow: 2px 2px 10px black;
         position: absolute;
-        display: flex;
         flex-direction: column;
         height: 90px;
         width: 200px;
@@ -754,7 +755,7 @@
         border-radius: 10px 0 0 10px;
         z-index: 1;
         right: -220px;
-        transition: .3s;
+        transition: .4s;
     
         & #light-dark-theme2 {
             display: flex;
@@ -813,6 +814,8 @@
             }
         }
     }
+    
+
     .sandwich-light {
         background-color: #69707c;
         box-shadow: 2px 2px 10px black;
@@ -825,8 +828,8 @@
         top: 70px;
         border-radius: 10px 0 0 10px;
         z-index: 1;
-        right: -40px;
-        transition: .5s;
+        right: -20px;
+        transition: .4s;
     
         & #light-dark-theme2 {
             display: flex;
@@ -888,7 +891,7 @@
     
     
     
-
+    /*Botão de abrir o Menu Sandwich*/
     .open-menu {
         display: flex;
         background-color: transparent;
