--- a/App/Views/CortesPage/cortes.html
+++ b/App/Views/CortesPage/cortes.html
@@ -13,7 +13,6 @@
                     <input type="radio" id="radio5" name="radio-buttons" value="inp5"/>
                     <input type="radio" id="radio6" name="radio-buttons" value="inp6"/>
                     <input type="radio" id="radio7" name="radio-buttons" value="inp7"/> 
-
                     <div class="slide first slide1">
                         <div class="background-text">
                             Militar
@@ -91,7 +90,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="navigate-auto">
                         <div class="auto-btn1"></div>
                         <div class="auto-btn2"></div>
@@ -281,6 +279,14 @@
                 utilizando as melhores técnicas e produtos do mercado para assegurar sua satisfação total. 
                 Venha nos visitar e experimente o que há de melhor em cortes de cabelo personalizados.
             </p>
+        </div>
+        <div class="go-agendamento">
+            <form method='post' action="http://localhost/Barbearia-Noblesse/?method=goAgendamento">
+                <button id="btn-agendar"
+                        type="submit">
+                    Agendar agora
+                </button>
+            </form>
         </div>
     </div>
 </main>
