--- a/App/Views/ErroPage/erro.html
+++ b/App/Views/ErroPage/erro.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-    <html lang="pt-br">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="public/css/ErroPageStyle/erro.css">
-            <title>Erro</title>
-        </head>
-        <body>
-            <h1>Página de Erro</h1>
-        </body>
-    </html>
+<div class="container-erro-page">
+    <div class="erro-404">
+        <img id="img-erro" src="public/img/erro-404.png" alt="Página de Erro 404">
+        <h1 id="title-erro">Ops... Página não encontrada.</h1>
+    </div>   
+</div>
+
