--- a/App/Views/StructurePages/structurePages.html
+++ b/App/Views/StructurePages/structurePages.html
@@ -11,6 +11,7 @@
             <link rel="stylesheet" href="public/css/LoginPageStyle/login.css">
             <link rel="stylesheet" href="public/css/RegisterPageStyle/register.css">
             <link rel="stylesheet" href="public/css/ProfilePageStyle/profile.css">
+            <link rel="stylesheet" href="public/css/ErroPageStyle/erro.css">
             <link rel="stylesheet" href="public/css/StructurePagesStyle/structure.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
