--- a/public/css/HomePageStyle/home.css
+++ b/public/css/HomePageStyle/home.css
@@ -1386,6 +1386,7 @@ body {
                         flex-direction: column;
                         width: 100%;
                         margin-bottom: 20px;
+                        appearance: none;
                         
                         & label {
                             margin-bottom: 5px;
