fix bug agendamentos

--- a/App/Views/StructurePages/structurePages.html
+++ b/App/Views/StructurePages/structurePages.html
@@ -69,7 +69,9 @@
                                             alt="Mudar Tema"
                                         /> 
                                         <label for="icon-theme" 
-                                               class="p-tema">Tema</label>                            
+                                               class="p-tema">
+                                               Tema
+                                        </label>                            
                                     </button>
                                     <button id="user-profile2">
                                         <a id="link-user" 
